added checkpoints and infersent submodule back to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/project/InferSent/
+/project/.ipynb_checkpoints/
