--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ################################################################################
 
 /.vs
+/project/InferSent
 /project/.ipynb_checkpoints/
 /project/encoder
 /project/fastText
